fix overflow issue with generic modals

--- a/webapp/platform/components/src/generic_modal/generic_modal.scss
+++ b/webapp/platform/components/src/generic_modal/generic_modal.scss
@@ -39,7 +39,6 @@
     }
 
     .modal-body {
-        max-height: 100%;
         padding: 0;
 
         &.divider {
@@ -99,7 +98,7 @@
     &.GenericModal__compassDesign {
         .modal-content {
             max-height: 90vh;
-            overflow: auto;
+
             .modal-body {
                 .GenericModal__body {
                     padding: 0;
